Using calc height css to avoid double scrollbar. Could have a better solution in the future. touched up some padding and made the left nav narrower

--- a/assets/playground.scss
+++ b/assets/playground.scss
@@ -10,7 +10,7 @@ body {
 }
 
 app-root {
-  padding: 30px;
+  padding: 30px 30px 0 30px;
   box-sizing: border-box;
   height: 100%;
   display: block;
@@ -30,8 +30,8 @@ fs-example {
   box-sizing: border-box;
 }
 
-fs-example:first-of-type {
-  padding-bottom: 0px;
+fs-example:first-child {
+  padding-top: 0px;
 }
 
 iframe.iframe-example {
@@ -62,16 +62,17 @@ fieldset {
 .example-container {
   display: flex;
   overflow: hidden;
-  height: 100vh;
+  height: calc(100vh - 131px);
 
   .examples-list {
     flex-shrink: 0;
-    width: 20vw;
     height: 100%;
-    padding: 20px 5px;
+    padding: 20px 20px;
     overflow-y: auto;
     flex-direction: column;
     list-style: none;
+    font-size: 13px;
+    margin: 0;
 
     li {
       cursor: pointer;
